add foundation, watch sass/coffee

--- a/src/app/components/home/homeView.jade
+++ b/src/app/components/home/homeView.jade
@@ -1,1 +1,56 @@
-p test
+.row
+    .large-3.columns
+        h1
+          img(src='http://placehold.it/400x100&text=Logo')
+      .large-9.columns
+        ul.button-group.right
+          li
+            a.button(href='#') Link 1
+          li
+            a.button(href='#') Link 2
+          li
+            a.button(href='#') Link 3
+          li
+            a.button(href='#') Link 4
+    .row
+      .large-12.columns
+        img(src='http://placehold.it/1000x400&text=[img]')
+        hr
+    .row
+      .large-4.columns
+        img(src='http://placehold.it/400x300&text=[img]')
+      .large-8.columns
+        h4 This is a content section.
+        .row
+          .large-6.columns
+            p
+              | Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+          .large-6.columns
+            p
+              | Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.
+    .row
+      .large-8.columns
+        h4 This is a content section.
+        p
+          | Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.
+        p
+          | Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.
+      .large-4.columns
+        img(src='http://placehold.it/400x300&text=[img]')
+    footer.row
+      .large-12.columns
+        hr
+        .row
+          .large-6.columns
+            p © Copyright no one at all. Go to town.
+          .large-6.columns
+            ul.inline-list.right
+              li
+                a(href='#') Link 1
+              li
+                a(href='#') Link 2
+              li
+                a(href='#') Link 3
+              li
+                a(href='#') Link 4
+
