--- a/src/index.jade
+++ b/src/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en" )
   head
-
+    link(rel="stylesheet" href="app/assets/css/app.css")
     script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.js")
     script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular-route.js")
 
